MMI Ont2Dot ChangeLog

2010-10-04
	- putInSourceRank(String classUri) added: Puts the given class (or classes if using a 
	  glob) marked with rank=source. For example, the default output for a class with URI
	  http://mmisw.org/ont/mmi/device/Component is:
	      "http://mmisw.org/ont/mmi/device/Component"   [  label="Component"  ]
	  but will be:
	      { rank=source "http://mmisw.org/ont/mmi/device/Component"   [  label="Component"  ] }
	  if dotGenerator.putInSourceRank("http://mmisw.org/ont/mmi/device/Component") is called
	  before the generation.
		
	  This can be specified to the main program with the --sourceRank parameter and "globbing"
	  is supported.
	  
	- Added rank=source also to the header and the data range boxes
	  
	  
2010-06-22
	- rdfs:Resource range shown as is -- ie., not using "Any" anymore.
	- fixed bug which would prevent the version info from being properly formed when coming
	  from multiple ontologies. Tested with http://sweet.jpl.nasa.gov/1.1/substance.owl
	
2010-06-21
	- jenaInfo._prepareInfoAboutOntology: Use getLexicalForm when getting the version.
	- DotGeneratorJenaImpl._getDataTypePropsLabelSuffixForClass: some ad hoc prefixing, 
	  eg., if range is http://www.w3.org/2000/01/rdf-schema#Datatype, then the label
	  for the range is written as rdfs:Datatype.
	  TODO: show associated values in instantiations also embedded in the shape box for
	  instances. 
	
2010-05-23
	- include a "generated by" box with name and version of input ontology.
	
	- added --includeUrls option, which generates URL=entityUri for the entities in the
	  ontology, so the imapx output format can be used with dot.
	  See http://www.graphviz.org/doc/info/output.html#d:imap
	
2010-05-22
	- "Any" used as a range (ie., RDFS:Resource) when not explicitly given for a property.
	
	- separateClassHierarchy(String classUri) included:
		Indicates that the class hierarchy rooted at the given class should be